@@ -1,7 +1,9 @@
 Revision history for Padre-Plugin-Vi
 
 0.23 unreleased
-     - actually install the translations (RSN)
+	actually install the translations (RSN)
+	compatibility to newer Padre versions
+     
 
 0.22    2009.06.22
 
